force-app/main/default/objects/Community_Task__mdt.object
<CustomObject>
    <fields>
        <fullName>Days_Until_Due__c</fullName>
        <label>Days Until Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to activate and deactivate a task instead of completely deleting the task. This field helps in displaying only the active Tasks on the component</description>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Community Task</label>
    <pluralLabel>Community Tasks</pluralLabel>
</CustomObject>